--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
   body {
+    font-family: 'Poppins', sans-serif;
     overflow: overlay;
+    background-color: #ccc;
   }
 }
