--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,18 @@
   body {
     font-family: 'Poppins', sans-serif;
     overflow: overlay;
-    background-color: #ccc;
+  }
+}
+
+.skeleton {
+  background-color: #eee;
+  background-image: linear-gradient(110deg, #ececec 18%, #f5f5f5 33%, #ececec 50%);
+  background-size: 200% 100%;
+  animation: 1.5s loading linear infinite;
+}
+
+@keyframes loading {
+  to {
+    background-position-x: -200%;
   }
 }
